# harness-store-demo

./: .dockerignore  .env.example  .gitignore  Makefile  PRODUCT.md  README.md  docker-compose.test.yml  docker-compose.yml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.cursor/: hooks.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  deps.py  health.py  orders.py  products.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  seed.py  session.py  wait_for_db.py
backend/app/models/: __init__.py  customer.py  order.py  product.py
backend/app/schemas/: common.py  order.py  product.py
backend/app/services/: order_service.py  product_service.py
backend/app/tests/: conftest.py  factories.py  test_seed_migrations.py
backend/app/tests/api/: test_admin_guard.py  test_health_api.py  test_orders_api.py  test_products_api.py
backend/app/tests/unit/: test_concurrency.py  test_order_number.py  test_order_service.py  test_totals_math.py
database/: init.sql  seed.sql
docs/: BUILD.md  TESTING.md
frontend/: .dockerignore  Dockerfile  Dockerfile.e2e  next.config.js  package-lock.json  package.json  playwright.config.ts  server-entry.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/e2e/: a11y.spec.ts  (+2 more)
k8s/: crux-website.yaml
scripts/: test.sh
(+74 files in other folders)
